[gd_scene load_steps=12 format=3 uid="uid://dujdy2di13elt"]

[ext_resource type="Script" uid="uid://bxtbo42mjoxb3" path="res://scenes/menu_title.gd" id="1_6d3kw"]
[ext_resource type="Theme" uid="uid://benif35do1jnk" path="res://theme/main.theme" id="1_gda4y"]
[ext_resource type="Texture2D" uid="uid://bxepm5hyi0ec1" path="res://images/bg/menu_use.png" id="2_bt2k5"]
[ext_resource type="Texture2D" uid="uid://cgvdhnbmwcajm" path="res://images/ui/menu_exit.png" id="3_r4bt5"]
[ext_resource type="Texture2D" uid="uid://bqyn5thepfadc" path="res://images/ui/menu_play.png" id="4_avo1h"]
[ext_resource type="Texture2D" uid="uid://5iv2fk4tdmf2" path="res://images/ui/menu_continue.png" id="5_uwf38"]
[ext_resource type="Texture2D" uid="uid://b78q61krlfp2d" path="res://images/ui/menu_sound.png" id="6_hg21e"]
[ext_resource type="PackedScene" uid="uid://5h3ennugpanl" path="res://scenes/sound_settings.tscn" id="8_gda4y"]
[ext_resource type="Texture2D" uid="uid://6pne2ccagldk" path="res://images/ui/emptybutton.png" id="8_nmj8x"]
[ext_resource type="PackedScene" uid="uid://283te103b353" path="res://scenes/credits.tscn" id="9_oe4d4"]

[sub_resource type="LabelSettings" id="LabelSettings_gda4y"]
font_size = 65
font_color = Color(0.164706, 0.490196, 0.858824, 1)

[node name="menu_title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gda4y")
script = ExtResource("1_6d3kw")
metadata/_edit_lock_ = true

[node name="menubg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bt2k5")
metadata/_edit_lock_ = true

[node name="Gamename" type="Label" parent="."]
layout_mode = 0
offset_left = 1154.0
offset_top = 25.0
offset_right = 1444.0
offset_bottom = 319.0
rotation = 0.172584
text = "The 
Exam 
Scam"
label_settings = SubResource("LabelSettings_gda4y")
horizontal_alignment = 1

[node name="btn_play" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 219.0
offset_right = 1173.0
offset_bottom = 603.0
texture_normal = ExtResource("4_avo1h")
texture_disabled = ExtResource("5_uwf38")

[node name="btn_exit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1105.0
offset_top = 546.0
offset_right = 1330.0
offset_bottom = 784.0
texture_normal = ExtResource("3_r4bt5")

[node name="btn_sound" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 851.0
offset_top = 730.0
offset_right = 1187.0
offset_bottom = 1054.0
texture_normal = ExtResource("6_hg21e")

[node name="btn_credits" type="TextureButton" parent="."]
self_modulate = Color(0.0745098, 0.164706, 0.243137, 1)
layout_mode = 0
offset_left = 1451.0
offset_top = 529.0
offset_right = 1746.0
offset_bottom = 813.0
rotation = 0.3038
texture_normal = ExtResource("8_nmj8x")
texture_disabled = ExtResource("5_uwf38")
ignore_texture_size = true
stretch_mode = 0

[node name="lb" type="Label" parent="btn_credits"]
layout_mode = 1
offset_left = 54.7395
offset_top = 104.406
offset_right = 244.739
offset_bottom = 175.406
theme_override_font_sizes/font_size = 38
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sound_settings" parent="." instance=ExtResource("8_gda4y")]
visible = false
layout_mode = 1

[node name="credits" parent="." instance=ExtResource("9_oe4d4")]
visible = false
layout_mode = 1

[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="btn_sound" to="." method="_on_btn_sound_pressed"]
[connection signal="pressed" from="btn_credits" to="." method="_on_btn_credits_pressed"]
